2001-02-06  Charles 'Buck' Krasic  <krasic@acm.org>

	* Integrate patch from Stefan Lucke for various speedups:

           - replace pointer dereferences with indexed accesses.

           - merge 248 idct prescale into 248 quant.

           - change IEC PAL (420) to generate YUY2 instead of YV12.  

	     Is this really faster?  If so, I am suprised.  I have added a
	     configure option to allow choosing which version to build
	     (YUY2 is default), so I can verify the performance comparison.

	   - Fix to Makefile.vanilla to include util.c in build.

	   - still to do: it looks like there are incompatable versions of
	     popt around.  Need to add a configure check to figure out
	     whether filename needs to be declared as a const char *.

	* Change license banner to read "a free DV codec" instead of "a
	  free decoder".

	* Add the banner to files that didn't have it.

2001-02-03  Peter Schlaile <udbz@rz.uni-karlsruhe.de>

        * Additional encoder speedups and improvements it now also uses
	  popt, can read ppm-streams, can correct wrongly interlaced input
	  pictures.  Speedups: we are between 4 and 5 times away from
	  realtime on my AMD K6/400 ;-) slowest part is now the RGB to YUV
	  conversion.	
	
	* added new program
	  - ppmqscale           quality (and quick) ppm scaler.Use it like this
	                        cat *.ppm |ppmqscale 720 576 |encode -- -
	                        does linear interpolation, next thing is
				MMX optimization for it.
	
	* playdv can now write ppm-streams  
	  
2001-01-20  Charles 'Buck' Krasic  <krasic@acm.org>

	* version 0.3

	* Minor configure.in cleanups.

	* Add Peter's new utilities to Makefile.am.  Minor cleanups for
	  -Wall.
	

2001-01-20  Peter Schlaile <udbz@rz.uni-karlsruhe.de>
	
	* Made encoder finally work correctly for DCT 88
	  Inserted META information
	
	* Added playdv option: dump frames
	
	* added new programs: 
	  - insert_audio        Audio dub an existing video stream